package structuration.decorator.eni;

public interface ComposantGraphiqueVehicule {
    void affiche();
}
